fix styling, background left, header gap

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -11,11 +11,8 @@
     justify-content: flex-start;
     align-items: center;
     padding: 20px;
-    background-color: rgba(0, 0, 0, 0.285);
-    background-image: 'testbackground.jpeg';
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+    color: white
+    /* background-color: rgba(0, 0, 0, 0.285); */
   }
   
   .profile-photo {
@@ -47,7 +44,7 @@
   }
   
   .email-link {
-    color: #333;
+    color: white;
     text-decoration: none;
     font-size: 14px;
     text-align: center;
@@ -62,7 +59,8 @@
   .right-half {
     width: 70%;
     overflow-y: auto;
-    padding: 20px;
+    padding: 0px;
+    background-color: rgba(249, 248, 248, 0.958);
   }
   .profile-name {
     margin-top: 10px;
@@ -78,6 +76,6 @@
     margin-bottom: 15px;
     text-align: center;
     font-size: 1em;
-    color: #666;
+    color: white;
     margin-left: 150px;
   }
