--- a/client/src/components/Contact.css
+++ b/client/src/components/Contact.css
@@ -9,7 +9,7 @@ body {
     max-width: 500px;
     margin: 100px auto;
     padding: 20px;
-    background-color: #ffffff;
+    background-color: #1212121e;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
